--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 pybind11
--e "git+ssh://git@github.com/kesko-dev/kai-common.git#egg=kai-common[base,mq]"
+-e "git+ssh://git@github.com/kesko-dev/kai-common.git#egg=kai-common[base]"
